tests/failing/empty_struct_test.rs
use redbit::*;

#[entity]
struct EmptyStruct {

}

fn main() {
    // If it compiles successfully, we're good.
}
