tests/failing/empty_struct_test.stderr
error: `#[pk]` or `#[fk] attribute not found on any column.
 --> tests/failing/empty_struct_test.rs:4:1
  |
4 | / struct EmptyStruct {
5 | |
6 | | }
  | |_^

error[E0599]: no function or associated item named `routes` found for struct `EmptyStruct` in the current scope
 --> tests/failing/empty_struct_test.rs:3:1
  |
3 | #[entity]
  | ^^^^^^^^^ function or associated item not found in `EmptyStruct`
4 | struct EmptyStruct {
  | ------------------ function or associated item `routes` not found for this struct
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `client_calls` found for struct `EmptyStruct` in the current scope
 --> tests/failing/empty_struct_test.rs:3:1
  |
3 | #[entity]
  | ^^^^^^^^^ function or associated item not found in `EmptyStruct`
4 | struct EmptyStruct {
  | ------------------ function or associated item `client_calls` not found for this struct
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
